--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
-    "mongoose": "^7.3.0"
+    "mongoose": "^7.3.0",
+    "node-geocoder": "^4.2.0",
+    "slugify": "^1.6.6",
+    "validator": "^13.9.0"
   }
 }
