--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "homepage": "https://github.com/suyashmishra007/Restful-API-Nodejs#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "node-geocoder": "^4.2.0",
+    "nodemailer": "^6.9.3",
     "slugify": "^1.6.6",
     "validator": "^13.9.0"
   }
