--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "node-geocoder": "^4.2.0",
